[gd_scene load_steps=25 format=3 uid="uid://cpq6v7yqk8y8j"]

[ext_resource type="Script" uid="uid://cp2rqqlp75g6c" path="res://src/player/xr_player.gd" id="1_player"]
[ext_resource type="Script" uid="uid://ctf4856v8f65j" path="res://src/player/xr_origin_3d.gd" id="2_xr_origin"]
[ext_resource type="Script" uid="uid://coktjl2e68ifs" path="res://src/player/physics_hand.gd" id="3_physics_hand"]
[ext_resource type="Script" uid="uid://b0ncs507wux1w" path="res://src/player/desktop_controller.gd" id="4_desktop"]
[ext_resource type="Script" uid="uid://deum3u4irqnyx" path="res://src/objects/watch_compass.gd" id="5_watch"]
[ext_resource type="Script" uid="uid://d0gh2ivuh4osn" path="res://src/player/hand_pointer.gd" id="6_pointer"]
[ext_resource type="PackedScene" uid="uid://b2gkx1eim00mw" path="res://src/ui/UIViewport3D.tscn" id="7_ui_viewport"]
[ext_resource type="Script" uid="uid://dh7nhbtbxywoc" path="res://src/systems/voxel_chunk_manager.gd" id="11_2d0bc"]
[ext_resource type="Script" uid="uid://dr821xg418lpi" path="res://src/player/components/player_movement_component.gd" id="12_movement"]
[ext_resource type="Script" uid="uid://b3e1iih2vth83" path="res://src/systems/grid_painter.gd" id="13_grid_painter"]
[ext_resource type="Script" uid="uid://04sudajutma5" path="res://src/player/components/player_network_component.gd" id="14_network_comp"]
[ext_resource type="Script" uid="uid://cxk34sx374uym" path="res://src/player/components/player_voice_component.gd" id="15_voice_comp"]

[sub_resource type="BoxMesh" id="BoxMesh_xxbg3"]

[sub_resource type="BoxMesh" id="BoxMesh_l588l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xxbg3"]

[sub_resource type="BoxMesh" id="BoxMesh_hand"]

[sub_resource type="BoxMesh" id="BoxMesh_watch_face"]
size = Vector3(0.04, 0.004, 0.04)

[sub_resource type="BoxMesh" id="BoxMesh_watch_needle"]
size = Vector3(0.02, 0.002, 0.002)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ray"]

[sub_resource type="SphereMesh" id="SphereMesh_watch_hit"]
radius = 0.015
height = 0.03

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pointer_face"]
transparency = 1
albedo_color = Color(0.87, 0.24, 0.24, 0.85)

[sub_resource type="QuadMesh" id="QuadMesh_pointer_face"]
size = Vector2(0.04, 0.04)

[sub_resource type="CylinderMesh" id="CylinderMesh_pointer_hit"]
top_radius = 0.01
bottom_radius = 0.01
height = 0.001
radial_segments = 16

[sub_resource type="BoxShape3D" id="BoxShape3D_hand"]

[node name="XRPlayer" type="Node3D" unique_id=1985006532]
script = ExtResource("1_player")
desktop_extra_collider_offset = Vector3(0, 0, 0)

[node name="BuildRoot" type="Node3D" parent="." unique_id=951936055]

[node name="PlayerBody" type="RigidBody3D" parent="." unique_id=939809904 groups=["player"]]
collision_layer = 2
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 5.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -6.35, 0)

[node name="XROrigin3D" type="XROrigin3D" parent="PlayerBody" unique_id=593593922]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.618921, -0.180528)
script = ExtResource("2_xr_origin")

[node name="XRCamera3D" type="XRCamera3D" parent="PlayerBody/XROrigin3D" unique_id=678573024]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03717, 0)

[node name="BodyMesh" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/XRCamera3D" unique_id=596586885]
transform = Transform3D(0.3, 0, 0, 0, 0.4, 0, 0, 0, 0.2, 0, -0.32911, 0.00616683)
cast_shadow = 0
mesh = SubResource("BoxMesh_xxbg3")

[node name="HeadArea" type="Area3D" parent="PlayerBody/XROrigin3D/XRCamera3D" unique_id=508713069 groups=["player"]]
collision_layer = 2

[node name="HeadMesh" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/XRCamera3D/HeadArea" unique_id=396937068]
transform = Transform3D(-0.23, 3.03201e-05, -0.000230782, -3.05237e-05, -0.23, 0.000202858, -0.000230755, 0.000202888, 0.23, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_l588l")
skeleton = NodePath("../..")

[node name="HeadCollisionShape" type="CollisionShape3D" parent="PlayerBody/XROrigin3D/XRCamera3D/HeadArea" unique_id=346767088]
transform = Transform3D(0.23, 0, 0, 0, 0.23, 0, 0, 0, 0.23, 0, 0, 0)
shape = SubResource("BoxShape3D_xxbg3")

[node name="LeftController" type="XRController3D" parent="PlayerBody/XROrigin3D" unique_id=829066177]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.846876, 0, 0)
tracker = &"left_hand"

[node name="LeftHandMesh" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController" unique_id=2085390048]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_hand")

[node name="Watch" type="Node3D" parent="PlayerBody/XROrigin3D/LeftController" unique_id=832495262]
transform = Transform3D(-2.94803e-08, -0.738337, 0.674431, -3.22737e-08, 0.674431, 0.738338, -0.999999, -2.12286e-22, -4.37114e-08, -0.0622383, 0.0441848, 0)
script = ExtResource("5_watch")
rotation_axis_local = Vector3(0, 1, 0)
ray_length = 1.0
show_line = false
show_hitpoint = false

[node name="UIViewportWatch" parent="PlayerBody/XROrigin3D/LeftController/Watch" unique_id=766114696 instance=ExtResource("7_ui_viewport")]
transform = Transform3D(0.12, 0, 0, 0, 0.055748, 0.106271, 0, -0.106271, 0.055748, 0, 0.058575, -0.118114)

[node name="WatchFace" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController/Watch" unique_id=1295475450]
cast_shadow = 0
mesh = SubResource("BoxMesh_watch_face")

[node name="Needle" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController/Watch" unique_id=473872773]
transform = Transform3D(0.02, 0, 0, 0, 0.002, 0, 0, 0, 0.002, 0, 0.00955808, 0)
visible = false
cast_shadow = 0
mesh = SubResource("BoxMesh_watch_needle")

[node name="RayCast" type="RayCast3D" parent="PlayerBody/XROrigin3D/LeftController/Watch" unique_id=2108499496]
target_position = Vector3(0, 1, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="RayVisual" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController/Watch" unique_id=1939927490]
material_override = SubResource("StandardMaterial3D_ray")
cast_shadow = 0

[node name="RayHit" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController/Watch" unique_id=1095179302]
cast_shadow = 0
mesh = SubResource("SphereMesh_watch_hit")

[node name="HandPointer" type="Node3D" parent="PlayerBody/XROrigin3D/LeftController" unique_id=1391630202]
script = ExtResource("6_pointer")
ray_length = 1.5
ray_length_min = 0.001
ray_length_max = 1000000.0
include_pointer_color = true
pointer_color = Color(0.568627, 1, 1, 1)
ray_visibility_mode = "on_hit_or_trigger"
hit_visibility_mode = "always"
hit_shape = "sphere"
hit_scale_per_meter = 0.5
hit_min_scale = 0.05
hit_max_scale = 1000000000.0
hit_scale_user_multiplier_min = 0.01
hit_scale_user_multiplier_max = 10.0

[node name="PointerFace" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController/HandPointer" unique_id=1064310651]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.07)
visible = false
material_override = SubResource("StandardMaterial3D_pointer_face")
cast_shadow = 0
mesh = SubResource("QuadMesh_pointer_face")

[node name="PointerRayCast" type="RayCast3D" parent="PlayerBody/XROrigin3D/LeftController/HandPointer" unique_id=1770878347]
target_position = Vector3(0, 0, -3.5)
hit_from_inside = true

[node name="PointerRayVisual" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController/HandPointer" unique_id=422145121]
cast_shadow = 0

[node name="PointerRayHit" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/LeftController/HandPointer" unique_id=2032582587]
cast_shadow = 0
mesh = SubResource("CylinderMesh_pointer_hit")

[node name="RightController" type="XRController3D" parent="PlayerBody/XROrigin3D" unique_id=1759401453]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.549018, 0, 0)
tracker = &"right_hand"

[node name="RightHandMesh" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/RightController" unique_id=911480807]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_hand")

[node name="HandPointer" type="Node3D" parent="PlayerBody/XROrigin3D/RightController" unique_id=492218641]
script = ExtResource("6_pointer")
ray_length = 1.5
ray_length_min = 0.001
ray_length_max = 1000000.0
ray_visibility_mode = "on_hit_or_trigger"
hit_visibility_mode = "always"
hit_shape = "sphere"
hit_scale_per_meter = 0.5
hit_min_scale = 0.05
hit_max_scale = 1000000000.0
hit_scale_user_multiplier_min = 0.01
hit_scale_user_multiplier_max = 10.0

[node name="PointerFace" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/RightController/HandPointer" unique_id=611834496]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.07)
material_override = SubResource("StandardMaterial3D_pointer_face")
cast_shadow = 0
mesh = SubResource("QuadMesh_pointer_face")

[node name="PointerRayCast" type="RayCast3D" parent="PlayerBody/XROrigin3D/RightController/HandPointer" unique_id=42189760]
target_position = Vector3(0, 0, -3.5)

[node name="PointerRayVisual" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/RightController/HandPointer" unique_id=273281057]
cast_shadow = 0

[node name="PointerRayHit" type="MeshInstance3D" parent="PlayerBody/XROrigin3D/RightController/HandPointer" unique_id=1202519073]
cast_shadow = 0
mesh = SubResource("CylinderMesh_pointer_hit")

[node name="DesktopCamera" type="Camera3D" parent="PlayerBody" unique_id=250281076]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.755936, 0)

[node name="CenterPointer" type="Node3D" parent="PlayerBody/DesktopCamera" unique_id=424202139]
script = ExtResource("6_pointer")
ray_length = 3.5
ray_length_min = 0.001
ray_length_max = 1000000.0
include_pointer_color = true
hit_scale_user_multiplier_min = 0.01
hit_scale_user_multiplier_max = 10.0

[node name="PointerFace" type="MeshInstance3D" parent="PlayerBody/DesktopCamera/CenterPointer" unique_id=424887867]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -0.07)
material_override = SubResource("StandardMaterial3D_pointer_face")
cast_shadow = 0
mesh = SubResource("QuadMesh_pointer_face")

[node name="PointerRayCast" type="RayCast3D" parent="PlayerBody/DesktopCamera/CenterPointer" unique_id=399327217]
target_position = Vector3(0, 0, -3.5)
hit_from_inside = true

[node name="PointerRayVisual" type="MeshInstance3D" parent="PlayerBody/DesktopCamera/CenterPointer" unique_id=47473927]
cast_shadow = 0

[node name="PointerRayHit" type="MeshInstance3D" parent="PlayerBody/DesktopCamera/CenterPointer" unique_id=1002412688]
cast_shadow = 0
mesh = SubResource("CylinderMesh_pointer_hit")

[node name="DesktopController" type="Node" parent="PlayerBody" unique_id=1864759325]
script = ExtResource("4_desktop")

[node name="PhysicsHandLeft" type="RigidBody3D" parent="." unique_id=1837288581 node_paths=PackedStringArray("player_rigidbody", "target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.801002, 0, 0)
collision_layer = 4
gravity_scale = 0.0
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 8
script = ExtResource("3_physics_hand")
rot_frequency = 3000.0
player_rigidbody = NodePath("../PlayerBody")
target = NodePath("../PlayerBody/XROrigin3D/LeftController")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PhysicsHandLeft" unique_id=880726284]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
shape = SubResource("BoxShape3D_hand")

[node name="PhysicsHandLeftMesh" type="MeshInstance3D" parent="PhysicsHandLeft" unique_id=1450919141]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
visible = false
cast_shadow = 0
mesh = SubResource("BoxMesh_hand")

[node name="PhysicsHandRight" type="RigidBody3D" parent="." unique_id=526551679 node_paths=PackedStringArray("player_rigidbody", "target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.541033, 0, 0)
collision_layer = 4
gravity_scale = 0.0
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 8
script = ExtResource("3_physics_hand")
player_rigidbody = NodePath("../PlayerBody")
target = NodePath("../PlayerBody/XROrigin3D/RightController")
controller_name = "right_hand"

[node name="CollisionShape3D" type="CollisionShape3D" parent="PhysicsHandRight" unique_id=305575214]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
shape = SubResource("BoxShape3D_hand")

[node name="PhysicsHandRightMesh" type="MeshInstance3D" parent="PhysicsHandRight" unique_id=2008929583]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
visible = false
cast_shadow = 0
mesh = SubResource("BoxMesh_hand")

[node name="PlayerMovementComponent" type="Node" parent="." unique_id=232556656]
script = ExtResource("12_movement")
turn_mode = 1
enable_two_hand_grab_v3 = false
v3_show_visual = false

[node name="VoxelChunkManager" type="Node" parent="." unique_id=1325437584 groups=["voxel_manager"]]
script = ExtResource("11_2d0bc")

[node name="GridPainter" type="Node3D" parent="." unique_id=1302115314]
script = ExtResource("13_grid_painter")
player_root_path = NodePath("..")
head_path = NodePath("PlayerBody/XROrigin3D/XRCamera3D/HeadArea/HeadMesh")

[node name="PlayerNetworkComponent" type="Node" parent="." unique_id=1277471060]
script = ExtResource("14_network_comp")

[node name="PlayerVoiceComponent" type="Node" parent="." unique_id=948526531]
script = ExtResource("15_voice_comp")
